# tree-sitter-gsheets

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  output  package-lock.json  package.json  pathfinding.gse  pyproject.toml  rules.js  sanity.gse  setup.py  test.gsheets  tree-sitter.json  validate.js
bindings/c/: tree-sitter-gsheets.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gsheets/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSittergSheets/: gsheets.h
bindings/swift/TreeSittergSheetsTests/: TreeSittergSheetsTests.swift
queries/: highlights.scm  indents.scm
rules/: basic_types.js  cell_reference.js  expressions.js  identifier.js  operators.js
scripts/: generate-corpus-from-dev.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: dev_bellmanford.txt  dev_bst.txt  dev_calcforsurface.txt  dev_chess_bot.txt  dev_doformula.txt  dev_flookupj.txt  dev_parser.txt  dev_pathfinding.txt  dotted_and_calls.txt  statements.txt
test/dev-test/: bellmanford.gse  bst.gse  calcforsurface.gse  chess_bot.gse  doformula.gse  flookupj.gse  minimal.gse  parser.gse  pathfinding.gse
